third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking-lang-v2.2/lambda/inline-parity/bug_10991.exp
module 0x42::Test {
    fun foo(f: |(u64, u64)|(u64), g: |(u64, u64)|(u64), x: u64, _y: u64): u64 {
        f(x, _y) + g(x, _y)
    }
    public fun test() {
        if (!(foo(|(arg0,arg1)| __lambda__1__test(arg0, arg1), |(arg0,arg1)| __lambda__2__test(arg0, arg1), 10, 100) == 110)) abort 0;
    }
    fun __lambda__1__test(x: u64, param$1: u64): u64 {
        x
    }
    fun __lambda__2__test(param$0: u64, y: u64): u64 {
        y
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
  ┌─ bug_10991.move:6:20
  │
6 │         if (!(foo(|(arg0,arg1)| __lambda__1__test(arg0, arg1), |(arg0,arg1)| __lambda__2__test(arg0, arg1), 10, 100) == 110)) abort 0;
  │                    ^
  │                    │
  │                    Unexpected '('
  │                    Expected a variable or struct or variant name
